# pytecode

./: .gitignore  CLAUDE.md  README.md  dune-project  pytecode.opam
test/: CONFORMANCE.md  dune  interp_runner.ml  stdlib_sweep.ml  test_phir.ml  test_pytecode.ml
test/programs/: 003_big_int.py  006_bool_ops.py  010_multi_assign.py  011_aug_assign.py  014_walrus.py  015_del_and_nameerror.py  018_bitwise.py  020_chained_calls.py  021_if_elif.py  024_nested_loops.py  026_short_circuit.py  027_match_literals.py  028_match_sequence.py  029_match_mapping.py  030_match_class.py  034_kw_posonly.py  035_closures.py  036_lambda.py  038_mutual_recursion.py  040_decorator_args.py  041_higher_order.py  043_nested_scopes.py  044_function_attrs.py  045_default_eval_order.py  046_list_ops.py  047_slicing.py  048_dict_ops.py  049_set_ops.py  050_list_comp.py  054_zip_enumerate.py  055_aliasing.py  056_tuple_ops.py  057_nested_data.py  058_in_operator.py  059_list_of_funcs.py  061_str_methods.py  062_str_predicates.py  063_fstring.py  064_format_spec.py  065_str_slice_iter.py  (+31 more)
test/programs/3_data_model/3.1_objects_values_and_types/: objects_identity_type.py
test/programs/3_data_model/3.2.10_custom_classes/: custom_classes.py  exception_hierarchy.py
test/programs/3_data_model/3.2.11_class_instances/: builtin_subclassing.py  class_instances.py
test/programs/3_data_model/3.2.13_internal_types/: slice_objects.py
test/programs/3_data_model/3.2.1_none/: none.py
test/programs/3_data_model/3.2.2_notimplemented/: notimplemented.py
test/programs/3_data_model/3.2.3_ellipsis/: ellipsis.py
test/programs/3_data_model/3.2.4.1_integral/: int_methods.py  int_parsing.py  integral_int_bool.py
test/programs/3_data_model/3.2.4.2_real/: real_float.py
test/programs/3_data_model/3.2.4.3_complex/: complex_numbers.py
test/programs/3_data_model/3.2.4_numbers/: numeric_repr.py
test/programs/3_data_model/3.2.5.1_immutable_sequences/: bytes_methods.py  bytes_objects.py  immutable_sequences.py
test/programs/3_data_model/3.2.5.2_mutable_sequences/: bytearray_objects.py  mutable_sequences.py
test/programs/3_data_model/3.2.5_sequences/: sequences_common.py
test/programs/3_data_model/3.2.6_set_types/: frozenset.py  set_methods.py  set_types.py
test/programs/3_data_model/3.2.7.1_dictionaries/: dict_ops.py  dictionaries.py
test/programs/3_data_model/3.2.7_mappings/: mappings.py
test/programs/3_data_model/3.2.8_callable_types/: callable_types.py
test/programs/3_data_model/3.3.10_match_args/: match_args.py
test/programs/3_data_model/3.3.12_special_method_lookup/: special_method_lookup.py
test/programs/3_data_model/3.3.1_basic_customization/: bool_and_len.py  hashing.py  new_and_init.py  reflected_priority.py  repr_str_format.py  (+2 more)
(+147 files in other folders)
